# todos

./: .dockerignore  .env  Dockerfile  alembic.ini  compose.yaml  create_db.py  database.db  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 25ee30c43b76_initial_migration.py  37fa298421f3_initial_migration.py  6a8093b28e9b_initial_migration.py
app/: main.py
app/auth/: auth.py
app/core/: config.py  database.py  logging.py  security.py
app/crud/: lists.py  todos.py
app/models/: models.py
app/repository/: list_repo.py  todo_repo.py
app/routers/: lists.py  lists_routes.py  notification.py  todos.py  todos_route.py  users.py
app/schemas/: schemas.py
app/service/: list_service.py  todo_service.py
app/users/: repository.py  routes.py  service.py
app/utils/: rabbitmq.py
auth/: auth.py
core/: config.py  database.py  dependencies.py
crud/: lists.py  todos.py
data/: todos.sqlite3
models/: base.py  models.py  tables.py
routers/: lists.py  todos.py  users.py
schema/: schema.py
schemas/: schemas.py
