[project]
name = "todos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.1",
    "argon2-cffi>=23.1.0",
    "fastapi[standard]>=0.115.7",
    "greenlet>=3.1.1",
    "jwt>=1.3.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.38",
]
